syntax = "proto3";
package zchain.pb.magma;

import "pb/consumer/proto/hss.proto";

option go_package = "github.com/0chain/bandwidth_marketplace/code/pb/magma";

service Magma {
  rpc Connect (ConnectRequest) returns (NewSessionStart);
  rpc ReportUsage (ReportUsageRequest) returns (ReportUsageResponse);
}

message ConnectRequest {
  string userID = 1;
  string consumerID = 2;
  string providerID = 3;
  string accessPointID =5;
  consumer.Auth auth = 6;
}

message NewSessionStart {
  string sessionID = 1;
  ConnectionStatus status = 2;
}

enum ConnectionStatus {
  Failed = 0;
  Connected = 1;
}

message ReportUsageRequest {
  UsageData usageData = 1;
  string providerID = 2;
}

message UsageData {
  string sessionID = 1;
  uint64 octets_in = 2;
  uint64 octets_out = 3;
  uint64 session_time = 4; // in seconds
}

message ReportUsageResponse {}