syntax = "proto3";
package zchain.pb.provider;

import "pb/consumer/proto/hss.proto";

option go_package = "github.com/0chain/bandwidth_marketplace/code/pb/provider";

service AccessPoint{
  rpc Connect (ConnectRequest) returns (BeginSession);
}

message ConnectRequest {
  string userID = 1;
  string consumerID = 2;
  consumer.Auth auth = 3;
}

message BeginSession{
  string sessionID = 1;
}
